deps/lld/test/darwin/cmdline-objc_gc_compaction.objtxt
# RUN: not ld64.lld -arch x86_64 -objc_gc_compaction %s 2>&1 | FileCheck %s
#
# Test that the -objc_gc_compaction is rejected.
#

# CHECK: error: -objc_gc_compaction is not supported

--- !native
defined-atoms:
    - name:              _main
      type:              code
      scope:             global
      content:           [ 0x90 ]

...
